<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Sabar Kahabr"
            android:textSize="20sp"
            android:ems="20"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:text="@string/developer"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/hi_this_is_developer_for_any_kind_of_app_related_issue_please" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/mail_me_hello_satyabrata_saha_gmail_com" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="Social Media-" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/instagram"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intsagram"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>